Archive2/04/f3d56722e6bf3b/output
main.cpp: In function 'int main()':
main.cpp:7:36: error: invalid cast of an rvalue expression of type 'int' to type 'int&'
     ir = (ir + 3) & ~(decltype(ir))3;
                                    ^
