Archive2/04/f3d56722e6bf3b/main.cpp

#include <iostream>

int main () {
    int i = 7;
    int& ir = i;
    ir = (ir + 3) & ~(decltype(ir))3;
    std::cout << ir;
}